app/ratel/src/common/components/checkbox/style.css
.checkbox {
    width: 1rem;
    height: 1rem;
    box-sizing: border-box;
    padding: 0;
    border: none;
    border-radius: 4px;
    margin: 0;
    background-color: var(--primary-color-3);
    box-shadow: inset 0 0 0 1px var(--primary-color-7);
    color: var(--secondary-color-4);
    cursor: pointer;
}

.checkbox-indicator {
    display: flex;
    align-items: center;
    justify-content: center;
}

.checkbox[data-state="checked"] {
    background-color: var(--secondary-color-2);
    box-shadow: none;
    color: var(--primary-color);
}

.checkbox:focus-visible {
    box-shadow: 0 0 0 2px var(--focused-border-color);
}

.checkbox-check-icon {
    width: 1rem;
    height: 1rem;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke-width: 2;
}

